重新设计消息号